Change home link to root in 404.html

--- a/layouts/404.html
+++ b/layouts/404.html
@@ -2,7 +2,7 @@
 {{ define "main" }}
     <article class="center cf pv5 measure-wide-l">
       <h1>
-        The requested page was not found. Return to <a href="{{ .URL }}">home</a>.
+        The requested page was not found. Return to <a href="/">home</a>.
       </h1>
     </article>
 {{ end }}
