--- a/layouts/partials/site-footer.html
+++ b/layouts/partials/site-footer.html
@@ -1,6 +1,6 @@
-<footer class="bg-near-black bottom-0 w-100 pa3" role="contentinfo">
+<footer class="bottom-0 w-100 pa3" role="contentinfo">
   <div class="flex justify-between">
-  <a class="f4 fw4 hover-white no-underline white-70 dn dib-ns pv2 ph3" href="{{ .Site.BaseURL }}" >
+  <a class="f4 fw2 no-underline black dn dib-ns pv2 ph3">
     &copy; {{ now.Format "2006" }} {{ .Site.Params.author }}
   </a>
   {{ partial "social-follow.html" . }}
