--- a/layouts/index.html
+++ b/layouts/index.html
@@ -8,17 +8,15 @@
   {{ if ge $section_count 1 }}
     {{ $section_name := index (.Site.Params.mainSections) 0 }}
 
-    <div class="pa3 pa4-ns w-100 w-70-ns center">
-       {{ with .Site.GetPage "section" $section_name }}
-        {{ end }}
+     {{ with .Site.GetPage "section" $section_name }}
+      {{ end }}
 
-      <section class="w-100 mw8">
-        {{ range $section }}
-          <div class="relative w-100 mb4">
-            {{ partial "summary-with-image.html" . }}
-          </div>
-        {{ end }}
-      </section>
-      </div>
+    <section class="flex-ns flex-wrap justify-around mt5">
+      {{ range $section }}
+        <div class="relative w-100 w-30-l mb4 bg-white">
+          {{ .Render "summary" }}
+        </div>
+      {{ end }}
+    </section>
   {{ end }}
 {{ end }}
