--- a/layouts/partials/site-footer.html
+++ b/layouts/partials/site-footer.html
@@ -1,8 +1,10 @@
 <footer class="bottom-0 w-100 pa3" role="contentinfo">
   <div class="flex justify-between">
-  <a class="f4 fw2 no-underline black dn dib-ns pv2 ph3">
-    &copy; {{ now.Format "2006" }} {{ .Site.Params.author }}
-  </a>
-  {{ partial "social-follow.html" . }}
+    <a class="f4 fw2 no-underline black dn dib-ns pv2 ph3">
+      &copy; {{ now.Format "2006" }} {{ .Site.Params.author }}
+    </a>
+    <div class="flex-l items-center">
+      {{ partial "social-follow.html" . }}
+    </div>
   </div>
 </footer>
