Add twitter and FB share buttons to all articles

--- a/layouts/post/single.html
+++ b/layouts/post/single.html
@@ -21,6 +21,9 @@
       <section class="nested-copy-line-height lh-copy serif f4 nested-links nested-img mid-gray">
         {{ .Content }}
       </section>
+      <div>
+        {{ partial "share-buttons.html" . }}
+      </div>
     </article>
   </div>
 {{ end }}
