--- a/layouts/partials/share-buttons.html
+++ b/layouts/partials/share-buttons.html
@@ -1,6 +1,6 @@
 <!--https://dev.twitter.com/web/tweet-button-->
 <a class="twitter-share-button"
-   href="https://twitter.com/intent/tweet?text={{ .Params.title }} by @DeveloperDavo"
+   href="https://twitter.com/intent/tweet?text={{ .Params.title }}&via=DeveloperDavo"
    data-size="large">
 </a>
 
