--- a/layouts/partials/site-scripts.html
+++ b/layouts/partials/site-scripts.html
@@ -1,2 +1,2 @@
 <script src="{{ "dist/app.bundle.js" | absURL }}" async></script>
-<script src="{{ "js/share-buttons.js" | absURL }}" async></script>
+<script src="{{ "js/social-buttons.js" | absURL }}" async></script>
