--- a/layouts/post/single.html
+++ b/layouts/post/single.html
@@ -22,7 +22,7 @@
         {{ .Content }}
       </section>
       <div>
-        {{ partial "share-buttons.html" . }}
+        {{ partial "social-buttons.html" . }}
       </div>
     </article>
   </div>
