Add twitter follow button

--- a/layouts/partials/social-buttons.html
+++ b/layouts/partials/social-buttons.html
@@ -4,6 +4,14 @@
    data-size="large">
 </a>
 
+<!--https://dev.twitter.com/web/follow-button-->
+<a class="twitter-follow-button"
+   href="https://twitter.com/DeveloperDavo"
+   data-show-count="false"
+   data-show-screen-name="false"
+   data-size="large">
+</a>
+
 <!--https://developers.facebook.com/docs/plugins/like-button/-->
 <div id="fb-root"></div>
 <div class="fb-like"
