Add GitHub follow button

--- a/layouts/partials/social-buttons.html
+++ b/layouts/partials/social-buttons.html
@@ -22,3 +22,9 @@
      data-show-faces="false"
      data-share="true">
 </div>
+
+<!--https://buttons.github.io/-->
+<div>
+  <a class="github-button" href="https://github.com/DeveloperDavo" data-size="large"
+     aria-label="Follow @DeveloperDavo on GitHub">Follow</a>
+</div>
