--- a/layouts/partials/social-buttons.html
+++ b/layouts/partials/social-buttons.html
@@ -1,17 +1,3 @@
-<!--https://dev.twitter.com/web/tweet-button-->
-<a class="twitter-share-button"
-   href="https://twitter.com/intent/tweet?text={{ .Params.title }}&via=DeveloperDavo"
-   data-size="large">
-</a>
-
-<!--https://dev.twitter.com/web/follow-button-->
-<a class="twitter-follow-button"
-   href="https://twitter.com/DeveloperDavo"
-   data-show-count="false"
-   data-show-screen-name="false"
-   data-size="large">
-</a>
-
 <!--https://developers.facebook.com/docs/plugins/like-button/-->
 <div id="fb-root"></div>
 <div class="fb-like"
@@ -23,8 +9,32 @@
      data-share="true">
 </div>
 
-<!--https://buttons.github.io/-->
 <div>
-  <a class="github-button" href="https://github.com/DeveloperDavo" data-size="large"
-     aria-label="Follow @DeveloperDavo on GitHub">Follow</a>
+  <!--https://dev.twitter.com/web/tweet-button-->
+  <a class="twitter-share-button"
+     href="https://twitter.com/intent/tweet?text={{ .Params.title }}&via=DeveloperDavo"
+     data-size="large">
+  </a>
+
+  <!--https://dev.twitter.com/web/follow-button-->
+  <a class="twitter-follow-button"
+     href="https://twitter.com/DeveloperDavo"
+     data-show-count="false"
+     data-show-screen-name="false"
+     data-size="large">
+  </a>
+
 </div>
+
+<div>
+  <!--https://buttons.github.io/-->
+  <a class="github-button"
+     href="https://github.com/DeveloperDavo"
+     data-size="large"
+     aria-label="Follow @DeveloperDavo on GitHub">
+    Follow
+  </a>
+</div>
+
+
+
