Add social buttons to home page

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -14,5 +14,8 @@
         </div>
       {{ end }}
     </section>
+    <div class="tc">
+      {{ partial "social-buttons.html" . }}
+    </div>
   {{ end }}
 {{ end }}
