Remove anchor in footer

--- a/layouts/partials/site-footer.html
+++ b/layouts/partials/site-footer.html
@@ -1,7 +1,5 @@
 <footer class="bottom-0 w-100 pa3" role="contentinfo">
-  <div class="flex justify-between">
-    <a class="f4 fw2 no-underline black dn dib-ns pv2 ph3">
-      &copy; {{ now.Format "2006" }} {{ .Site.Params.author }}
-    </a>
+  <div class="f4 fw2 no-underline black dn dib-ns pv2 ph3 flex justify-between">
+    &copy; {{ now.Format "2006" }} {{ .Site.Params.author }}
   </div>
 </footer>
