Add button for repo in footer

--- a/layouts/partials/site-footer.html
+++ b/layouts/partials/site-footer.html
@@ -1,4 +1,11 @@
 <footer class="bottom-0 w-100 pa3" role="contentinfo">
+  <span class="di v-mid">
+    The code for this website can be found on
+  </span>
+  <div id="github-repo-button" class="di">
+    <a class="github-button" href="https://github.com/DeveloperDavo/learnitmyway"
+       data-size="large" aria-label="Star DeveloperDavo/learnitmyway on GitHub">GitHub</a>
+  </div>
   <div class="f4 fw2 no-underline black dn dib-ns pv2 ph3 flex justify-between">
     &copy; {{ now.Format "2006" }} {{ .Site.Params.author }}
   </div>
