--- a/layouts/partials/social-buttons.html
+++ b/layouts/partials/social-buttons.html
@@ -26,7 +26,7 @@
     </a>
   </div>
 
-  <div id="github-buttons" class="di v-top">
+  <div id="github-follow-button" class="di v-top">
     <!--https://buttons.github.io/-->
     <a class="github-button"
        href="https://github.com/DeveloperDavo"
