--- a/static/css/social-buttons.css
+++ b/static/css/social-buttons.css
@@ -1,3 +1,7 @@
-.fb-like span{
+.fb-like span {
     vertical-align: initial !important;
+}
+
+#github-repo-button iframe {
+    vertical-align: middle !important;
 }
