Add link to repo as partial in single and index

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -17,6 +17,7 @@
     </section>
     <div class="tc">
       {{ partial "social-buttons.html" . }}
+      {{ partial "link-to-repo.html" . }}
     </div>
   {{ end }}
 {{ end }}
