--- a/layouts/post/single.html
+++ b/layouts/post/single.html
@@ -18,6 +18,9 @@
         {{ .Content }}
       </section>
       {{ partial "social-buttons.html" . }}
+      <div class="tc">
+        {{ partial "link-to-repo.html" . }}
+      </div>
     </article>
   </div>
 {{ end }}
