--- a/layouts/post/single.html
+++ b/layouts/post/single.html
@@ -16,11 +16,11 @@
       </time>
       <section class="nested-copy-line-height lh-copy serif f4 nested-links nested-img mid-gray">
         {{ .Content }}
+        {{ partial "social-buttons.html" . }}
+        <div class="tc mt4">
+          {{ partial "link-to-repo.html" . }}
+        </div>
       </section>
-      {{ partial "social-buttons.html" . }}
-      <div class="tc">
-        {{ partial "link-to-repo.html" . }}
-      </div>
     </article>
   </div>
 {{ end }}
