Revert "Remove article padding in single"
This reverts commit e62db46bd6eca96996f03be831cd36af0828f8bb.

--- a/layouts/post/single.html
+++ b/layouts/post/single.html
@@ -5,7 +5,7 @@
 
 {{ define "main" }}
   <div class="flex-l mt2 mw8 center">
-    <article class="center cf mw7">
+    <article class="center cf pv5 ph3 ph4-ns mw7">
       <h1 class="f1 athelas">
         {{ .Title }}
       </h1>
