Make content font consist

--- a/layouts/post/summary.html
+++ b/layouts/post/summary.html
@@ -7,7 +7,7 @@
   <h1 class="f3 near-black">
     {{ .Title }}
   </h1>
-  <div class="nested-links f5 lh-copy nested-copy-line-height">
+  <div class="nested-links serif f4 lh-copy nested-copy-line-height mid-gray">
     {{ .Params.excerpt }}
   </div>
 </div>
