--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,5 +1,5 @@
 {{ define "main" }}
-  <article class="cf ph3 ph5-l pv3 pv4-l f4 tc-l center measure-wide lh-copy mid-gray">
+  <article class="cf ph3 ph5-l pv3 pv4-l serif f4 tc-l center measure-wide lh-copy mid-gray">
     {{ .Content }}
   </article>
   {{ $mainSections := .Site.Params.mainSections | default (slice "post") }}
