Display extra content as "link" from front matter of why-i-changed

--- a/layouts/partials/extra-content.html
+++ b/layouts/partials/extra-content.html
@@ -1,1 +1,11 @@
-The quick brown.
+<div class="f4 b">
+  You might also like:
+</div>
+<ul>
+  {{ $extraContent := $.Params.extraContent}}
+  {{ range $extraContent }}
+  <li>
+    <a href="{{ . }}" target="_blank" rel="noopener">link</a>
+  </li>
+  {{end}}
+</ul>
