Add bt and bb and padding to extra content

--- a/layouts/post/single.html
+++ b/layouts/post/single.html
@@ -19,7 +19,7 @@
         <div class="mt4">
         {{ partial "social-buttons.html" . }}
         </div>
-        <div class="mt4">
+        <div class="mt4 pv4 bt bb">
           {{ partial "extra-content.html" . }}
         </div>
         <div class="tc mt5">
