Links are no longer blue

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -18,6 +18,7 @@
     {{ end }}
 
     <link href='{{ "dist/main.css" | absURL }}' rel='stylesheet' type="text/css" />
+    <link href='{{ "css/styles.css" | absURL }}' rel='stylesheet' type="text/css" />
     <link href='{{ "css/social-buttons.css" | absURL }}' rel='stylesheet' type="text/css" />
     {{ block "favicon" . }}
       {{ partial "site-favicon.html" . }}
