--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -17,6 +17,10 @@
       <META NAME="ROBOTS" CONTENT="NOINDEX, NOFOLLOW">
     {{ end }}
 
+    <meta property="og:image" content='{{ "img/logo-200w.png" | absURL }}'/>
+    <meta property="og:image:width" content="200"/>
+    <meta property="og:image:height" content="200"/>
+
     <link href='{{ "dist/main.css" | absURL }}' rel='stylesheet' type="text/css" />
     <link href='{{ "css/styles.css" | absURL }}' rel='stylesheet' type="text/css" />
     <link href='{{ "css/social-buttons.css" | absURL }}' rel='stylesheet' type="text/css" />
