Remove fb like count

--- a/layouts/partials/social-buttons.html
+++ b/layouts/partials/social-buttons.html
@@ -3,7 +3,7 @@
   <!--https://developers.facebook.com/docs/plugins/like-button/-->
   <div id="fb-buttons" class="fb-like di v-top"
        data-href="https://www.learnitmyway.com{{ .URL }}"
-       data-layout="button_count"
+       data-layout="button"
        data-action="like"
        data-size="large"
        data-show-faces="false"
