--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -17,10 +17,6 @@
       <META NAME="ROBOTS" CONTENT="NOINDEX, NOFOLLOW">
     {{ end }}
 
-    <meta property="og:image" content='{{ "img/logo-200w.png" | absURL }}'/>
-    <meta property="og:image:width" content="200"/>
-    <meta property="og:image:height" content="200"/>
-
     <link href='{{ "dist/main.css" | absURL }}' rel='stylesheet' type="text/css" />
     <link href='{{ "css/styles.css" | absURL }}' rel='stylesheet' type="text/css" />
     <link href='{{ "css/social-buttons.css" | absURL }}' rel='stylesheet' type="text/css" />
@@ -38,6 +34,11 @@
     {{- template "_internal/google_news.html" . -}}
     {{- template "_internal/schema.html" . -}}
     {{- template "_internal/twitter_cards.html" . -}}
+
+    <meta property="og:image" content='{{ "img/logo-200w.png" | absURL }}'/>
+    <meta property="og:image:width" content="200"/>
+    <meta property="og:image:height" content="200"/>
+    <meta property="og:title" content="{{ .Site.Title }} | {{ .Title }}" />
 
     {{ if eq (getenv "HUGO_ENV") "production" | or (eq .Site.Params.env "production")  }}
       {{ template "_internal/google_analytics_async.html" . }}
