--- a/layouts/partials/site-header.html
+++ b/layouts/partials/site-header.html
@@ -1,5 +1,17 @@
-<header>
-  <div class="{{ .Site.Params.background_color_class | default "bg-black" }}">
-    {{ partial "site-navigation.html" . }}
+{{ $featured_image := .Param "featured_image" }}
+{{ $featured_image := (trim $featured_image "/") | absURL }}
+<header class="cover bg-top" style="background-image: url('{{ $featured_image }}');">
+  <div>
+    {{ partial "site-navigation.html" .}}
+    <div class="tc-l pv4 pv6-l ph3 ph4-ns">
+      <h1 class="f2 f-subheadline-l fw2 white-90 mb0 lh-title">
+        {{ .Title | default .Site.Title }}
+      </h1>
+      {{ with .Params.description }}
+      <h2 class="fw1 f5 f3-l white-80 measure-wide-l center mt3">
+        {{ . }}
+      </h2>
+      {{ end }}
+    </div>
   </div>
 </header>
