Add baseURL and remove absURL where it is misleading

--- a/layouts/partials/site-scripts.html
+++ b/layouts/partials/site-scripts.html
@@ -1,5 +1,5 @@
-<script src="{{ "dist/app.bundle.js" | absURL }}" async></script>
-<script src="{{ "js/social-buttons.js" | absURL }}" async></script>
+<script src="{{ "dist/app.bundle.js" }}" async></script>
+<script src="{{ "js/social-buttons.js" }}" async></script>
 
 <!--https://buttons.github.io/-->
 <script async defer src="https://buttons.github.io/buttons.js"></script>
