Revert "Add baseURL and remove absURL where it is misleading"
This reverts commit e6686eefd4f36f745bee8de70c3209986782ec9f.

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -17,9 +17,9 @@
       <META NAME="ROBOTS" CONTENT="NOINDEX, NOFOLLOW">
     {{ end }}
 
-    <link href='{{ "dist/main.css" }}' rel='stylesheet' type="text/css" />
-    <link href='{{ "css/styles.css" }}' rel='stylesheet' type="text/css" />
-    <link href='{{ "css/social-buttons.css" }}' rel='stylesheet' type="text/css" />
+    <link href='{{ "dist/main.css" | absURL }}' rel='stylesheet' type="text/css" />
+    <link href='{{ "css/styles.css" | absURL }}' rel='stylesheet' type="text/css" />
+    <link href='{{ "css/social-buttons.css" | absURL }}' rel='stylesheet' type="text/css" />
     {{ block "favicon" . }}
       {{ partial "site-favicon.html" . }}
     {{ end }}
