--- a/layouts/partials/site-footer.html
+++ b/layouts/partials/site-footer.html
@@ -1,5 +1,10 @@
 <footer class="bottom-0 w-100 pa3" role="contentinfo">
   <div class="f4 fw2 no-underline black dn dib-ns pv2 ph3 flex justify-between">
-    &copy; {{ now.Format "2006" }} {{ .Site.Params.author }}
+    <div>
+      &copy; {{ now.Format "2006" }} {{ .Site.Params.author }}
+    </div>
+    <div>
+      License: <a class="link black dim" rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">CC BY-SA</a>
+    </div>
   </div>
 </footer>
