--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -38,7 +38,7 @@
     <meta property="og:image" content='{{ "img/logo-200w.png" | absURL }}'/>
     <meta property="og:image:width" content="200"/>
     <meta property="og:image:height" content="200"/>
-    <meta property="og:title" content="{{ .Site.Title }} | {{ .Title }}" />
+    <meta property="og:title" content="{{ .Title | default .Site.Title }}" />
 
     {{ if eq (getenv "HUGO_ENV") "production" | or (eq .Site.Params.env "production")  }}
       {{ template "_internal/google_analytics_async.html" . }}
