--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -33,14 +33,13 @@
     {{- template "_internal/opengraph.html" . -}}
     {{- template "_internal/google_news.html" . -}}
     {{- template "_internal/schema.html" . -}}
-    {{- template "_internal/twitter_cards.html" . -}}
 
     <meta property="og:image" content='{{ "img/logo-200w.png" | absURL }}'/>
     <meta property="og:image:width" content="200"/>
     <meta property="og:image:height" content="200"/>
     <meta property="og:title" content="{{ .Title | default .Site.Title }}" />
 
-    <meta name="twitter:title" content="{{ .Title | default .Site.Title }}"/>
+    <meta name="twitter:card" content="summary" />
 
     {{ if eq (getenv "HUGO_ENV") "production" | or (eq .Site.Params.env "production")  }}
       {{ template "_internal/google_analytics_async.html" . }}
