Change font size of description

--- a/layouts/partials/site-header.html
+++ b/layouts/partials/site-header.html
@@ -7,7 +7,7 @@
         {{ .Title | default .Site.Title }}
       </h1>
       {{ with .Params.description }}
-      <h2 class="i fw1 f5 f3-l white-80 measure-wide-l center mt3">
+      <h2 class="i fw1 f4 white-80 measure-wide-l center mt3">
         {{ . }}
       </h2>
       {{ end }}
