Update follow styling

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,8 +1,14 @@
 {{ define "main" }}
   <article class="cf ph3 ph5-l pv3 pv4-l serif f4 tc-l center measure-wide lh-copy mid-gray">
-    {{ .Content }}
-    {{ partial "follow.html" . }}
-    {{ partial "social-buttons.html" . }}
+    <div class="mt4">
+      {{ .Content }}
+    </div>
+    <div class="mt4">
+      {{ partial "follow.html" . }}
+    </div>
+    <div class="mt4">
+      {{ partial "social-buttons.html" . }}
+    </div>
   </article>
   {{ $mainSections := .Site.Params.mainSections | default (slice "post") }}
   {{ $section := where .Site.RegularPages "Section" "in" $mainSections }}
