--- a/layouts/partials/follow.html
+++ b/layouts/partials/follow.html
@@ -1,9 +1,11 @@
-<form style="border:1px solid #ccc;padding:3px;text-align:center;"
+<form class="tc mb4 pa3 bg-white serif near-black"
       action="https://tinyletter.com/developerdavo-noreply"
-      method="post" target="popupwindow"
+      method="post"
+      target="popupwindow"
       onsubmit="window.open('https://tinyletter.com/developerdavo-noreply', 'popupwindow', 'scrollbars=yes,width=800,height=600');return true">
-  <p><label for="tlemail">Enter your email to keep up to date with the latest content!</label></p>
-  <p><input type="text" style="width:140px" name="email" id="tlemail"/></p><input type="hidden" value="1" name="embed"/><input
-    type="submit" value="Follow"/>
+  <h4><label for="tlemail">Enter your email to receive the latest content!</label></h4>
+  <p><input class='f4 tl reset ba b--black-20 pa2 mb2 w-50 mid-gray' type="text" name="email" id="tlemail"/></p>
+  <input type="hidden" value="1" name="embed"/>
+  <input class='ba br2 dib pa1 f5 link b--near-black bg-near-black white dim' type="submit" value="Follow"/>
 </form>
 
