Update styling in site-footer.html

--- a/layouts/partials/site-footer.html
+++ b/layouts/partials/site-footer.html
@@ -1,9 +1,9 @@
-<footer class="bottom-0 w-100 pa3" role="contentinfo">
-  <div class="f4 fw2 no-underline black dn dib-ns pv2 ph3 flex justify-between">
-    <div>
+<footer class="mt2 bottom-0 w-100 pa3 tc" role="contentinfo">
+  <div class="f5 fw2 no-underline black center">
+    <div class="mt2">
       &copy; {{ now.Format "2006" }} {{ .Site.Params.author }}
     </div>
-    <div>
+    <div class="mt2">
       License: <a class="link black dim" rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">CC BY-SA</a>
     </div>
   </div>
