Update styling in index.html

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -15,10 +15,10 @@
   {{ $section_count := len $section }}
   {{ if ge $section_count 1 }}
     {{ $section_name := index (.Site.Params.mainSections) 0 }}
-    <section class="flex-ns flex-wrap justify-around" >
+    <section class="flex flex-wrap justify-around" >
       {{ range $section }}
         {{ $url := .Params.existingUrl | default .URL }}
-        <a href="{{ $url }}"  class="relative w-100 w-30-l mb4 bg-white link dim">
+        <a href="{{ $url }}" class="relative w-100 w-30-l mb4-ns bb b--light-gray b--none-l bg-white link dim">
           {{ .Render "summary" }}
         </a>
       {{ end }}
