--- a/layouts/partials/link-to-repo.html
+++ b/layouts/partials/link-to-repo.html
@@ -1,7 +1,9 @@
-<span class="di v-mid">
-    The code for this website can be found on
+<div class="pa4 lh-copy">
+  <span class="v-mid">
+      The code for this website can be found on
   </span>
-<div id="github-repo-button" class="di">
-  <a class="github-button" href="https://github.com/DeveloperDavo/learnitmyway"
-     data-size="large" aria-label="Star DeveloperDavo/learnitmyway on GitHub">GitHub</a>
+  <div id="github-repo-button" class="ml1 di">
+    <a class="github-button" href="https://github.com/DeveloperDavo/learnitmyway"
+       data-size="large" aria-label="Star DeveloperDavo/learnitmyway on GitHub">GitHub</a>
+  </div>
 </div>
