Open license in new tab

--- a/layouts/partials/site-footer.html
+++ b/layouts/partials/site-footer.html
@@ -4,7 +4,7 @@
       &copy; {{ now.Format "2006" }} {{ .Site.Params.author }}
     </div>
     <div class="mt2">
-      License: <a class="link black dim" rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">CC BY-SA</a>
+      License: <a class="link black dim" rel="license noopener" target="_blank" href="http://creativecommons.org/licenses/by-sa/4.0/">CC BY-SA</a>
     </div>
   </div>
 </footer>
