Add nav bar to footer and change color to dark brand color

--- a/layouts/partials/page-header.html
+++ b/layouts/partials/page-header.html
@@ -17,7 +17,7 @@
   </header>
 {{ else }}
   <header>
-    <div class="{{ .Site.Params.background_color_class | default "bg-black" }}">
+    <div style="background-color: #004ba0;">
       {{ partial "site-navigation.html" . }}
     </div>
   </header>
