Decrease font size on smaller devices

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,5 +1,5 @@
 {{ define "main" }}
-  <article class="cf ph3 ph5-l pv3 pv4-l serif f4 tc-l center measure-wide lh-copy mid-gray">
+  <article class="cf ph3 ph5-l pv3 pv4-l serif f4-ns f5 tc-l center measure-wide lh-copy mid-gray">
     <div class="mt4">
       {{ .Content }}
     </div>
@@ -24,7 +24,7 @@
       {{ end }}
     </section>
     <div class="tc mt4">
-      <div class="serif f4 mid-gray mt4">
+      <div class="serif f4-ns f5 mid-gray mt4">
         {{ partial "link-to-repo.html" . }}
       </div>
     </div>
