--- a/layouts/post/single.html
+++ b/layouts/post/single.html
@@ -12,7 +12,7 @@
       <h1 class="athelas">
         {{ .Title }}
       </h1>
-      <section class="nested-copy-line-height lh-copy mt2 serif f4 nested-links nested-img mid-gray">
+      <section class="nested-copy-line-height lh-copy mt2 serif f4-ns f5 nested-links nested-img mid-gray">
         {{ .Content }}
         <div class="mt4">
           {{ partial "follow.html" . }}
