Extract styles into links-to-repo partial

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -24,7 +24,7 @@
       {{ end }}
     </section>
     <div class="tc mt4">
-      <div class="serif f4-ns f5 mid-gray mt4">
+      <div class="mt4">
         {{ partial "link-to-repo.html" . }}
       </div>
     </div>
