Replace Twitter and GitHub follow buttons

--- a/layouts/partials/follow.html
+++ b/layouts/partials/follow.html
@@ -1,4 +1,4 @@
-<form class="tc mb4 pa3 bg-white serif near-black"
+<form class="tc pa3 bg-white serif near-black"
       action="https://tinyletter.com/developerdavo-noreply"
       method="post"
       target="popupwindow"
