--- a/layouts/partials/social-buttons.html
+++ b/layouts/partials/social-buttons.html
@@ -7,29 +7,11 @@
        data-layout="button_count">
   </div>
 
-  <div id="twitter-buttons" class="di v-top">
+  <div class="di v-top">
     <!--https://dev.twitter.com/web/tweet-button-->
     <a class="twitter-share-button"
        href="https://twitter.com/intent/tweet?text={{ .Params.title }}&via=DeveloperDavo"
        data-size="large">
-    </a>
-
-    <!--https://dev.twitter.com/web/follow-button-->
-    <a class="twitter-follow-button"
-       href="https://twitter.com/DeveloperDavo"
-       data-show-count="false"
-       data-show-screen-name="false"
-       data-size="large">
-    </a>
-  </div>
-
-  <div id="github-follow-button" class="di v-top">
-    <!--https://buttons.github.io/-->
-    <a class="github-button"
-       href="https://github.com/DeveloperDavo"
-       data-size="large"
-       aria-label="Follow @DeveloperDavo on GitHub">
-      Follow
     </a>
   </div>
 </div>
