--- a/layouts/partials/link-to-repo.html
+++ b/layouts/partials/link-to-repo.html
@@ -1,4 +1,4 @@
-<div class="pa4 lh-copy serif f4-ns f5 mid-gray">
+<div class="ph4 lh-copy serif f4-ns f5 mid-gray">
   <span class="v-mid">
       The code for this website can be found on
   </span>
