--- a/layouts/partials/site-navigation.html
+++ b/layouts/partials/site-navigation.html
@@ -1,7 +1,10 @@
 <nav class="pv3 ph3 ph4-ns" role="navigation">
-  <div class="flex-l justify-between items-center center">
+  <div class="flex justify-between items-center center">
     <a href="{{ .Site.BaseURL }}" class="f3 fw3 hover-white no-underline white-90 dib">
       {{ .Site.Title }}
     </a>
+    <div class="">
+      {{ partial "social-follow.html" . }}
+    </div>
   </div>
 </nav>
