--- a/layouts/post/single.html
+++ b/layouts/post/single.html
@@ -14,16 +14,16 @@
       </h1>
       <section class="nested-copy-line-height lh-copy mt2 serif f4-ns f5 nested-links nested-img mid-gray">
         {{ .Content }}
-        <div class="pv4">
+        <div class="mt4 pt1">
           {{ partial "social-buttons.html" . }}
         </div>
-        <div class="pv4 bt">
+        <div class="mt1 pt1">
           {{ partial "follow.html" . }}
         </div>
-        <div class="pv4 bt">
+        <div class="mt4 bb bt">
           {{ partial "extra-content.html" . }}
         </div>
-        <div class="tc pt4 bt">
+        <div class="tc mt4">
           {{ partial "link-to-repo.html" . }}
         </div>
       </section>
