Update URL for fb share button

--- a/layouts/partials/social-buttons.html
+++ b/layouts/partials/social-buttons.html
@@ -2,7 +2,7 @@
 <div>
   <!--https://developers.facebook.com/docs/plugins/share-button-->
   <div class="fb-share-button di v-top"
-       data-href="{{ .Site.BaseURL }}"
+       data-href="{{ .Permalink }}"
        data-size="large"
        data-layout="button_count">
   </div>
