--- a/layouts/partials/site-header.html
+++ b/layouts/partials/site-header.html
@@ -1,6 +1,9 @@
 {{ $featured_image := .Param "featured_image" }}
 {{ $featured_image := (trim $featured_image "/") | absURL }}
 <header class="cover bg-top" style="background-image: url('{{ $featured_image }}');">
+  <div style="background-color: #004ba0;">
+    {{ partial "site-navigation.html" . }}
+  </div>
   <div>
     <div class="tc-l pv4 pv6-l ph3 ph4-ns">
       <h1 class="f2 f-subheadline-l fw3 white-90 mb0 lh-title">
