Centre about content on small devices too

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,5 +1,5 @@
 {{ define "main" }}
-  <article class="cf ph3 ph5-l pv3 pv4-l serif f4-ns f5 tc-l center measure-wide lh-copy mid-gray">
+  <article class="cf ph3 ph5-l pv3 pv4-ns serif f4-ns f5 tc center measure-wide lh-copy mid-gray">
     <div class="mt4">
       {{ .Content }}
     </div>
