Add disqus internal template

--- a/layouts/post/single.html
+++ b/layouts/post/single.html
@@ -26,6 +26,9 @@
         <div class="tc mt4">
           {{ partial "link-to-repo.html" . }}
         </div>
+        <div class="tc mt4">
+          {{ template "_internal/disqus.html" . }}
+        </div>
       </section>
     </article>
   </div>
