--- a/layouts/partials/link-to-repo.html
+++ b/layouts/partials/link-to-repo.html
@@ -1,6 +1,6 @@
 <div class="ph4 lh-copy serif f4-ns f5 mid-gray">
   <span class="v-mid">
-      The code for this website can be found on
+      The source code for this website can be found on
   </span>
   <div id="github-repo-button" class="ml1 di">
     <a class="github-button" href="https://github.com/DeveloperDavo/learnitmyway"
