--- a/layouts/partials/site-favicon.html
+++ b/layouts/partials/site-favicon.html
@@ -1,3 +1,3 @@
 {{ if .Site.Params.favicon }}
-<link rel="shortcut icon" href="/{{ .Site.Params.favicon }}" type="image/x-icon" />
+<link rel="icon" type="image/png" href="/{{ .Site.Params.favicon }}">
 {{ end }}
