Replace Follow with Subscribe

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -4,7 +4,7 @@
       {{ .Content }}
     </div>
     <div class="mt4">
-      {{ partial "follow.html" . }}
+      {{ partial "subscribe.html" . }}
     </div>
     <div class="mt4">
       {{ partial "social-buttons.html" . }}
