--- a/layouts/partials/subscribe.html
+++ b/layouts/partials/subscribe.html
@@ -7,6 +7,6 @@
   <p><input class='f4 tl reset ba b--black-20 pa2 mb2 w-80 mid-gray' type="text" name="email" id="tlemail"/></p>
   <input type="hidden" value="1" name="embed"/>
   <input class='pointer dib ph2 pv1 ba br2 b--primary bg-primary f5 white link dim ' type="submit" 
-  value="Follow"/>
+  value="Subscribe"/>
 </form>
 
