--- a/layouts/post/single.html
+++ b/layouts/post/single.html
@@ -18,7 +18,7 @@
           {{ partial "social-buttons.html" . }}
         </div>
         <div class="mt1 pt1">
-          {{ partial "follow.html" . }}
+          {{ partial "subscribe.html" . }}
         </div>
         <div class="mt4 bb bt">
           {{ partial "extra-content.html" . }}
